# django_spam_service

./: manage.py  pyproject.toml
django_spam_service/: asgi.py  settings.py  urls.py  wsgi.py
mailing_service/: __init__.py  forms.py  models.py  urls.py  utils.py  views.py
mailing_service/migrations/: 0001_initial.py  0002_mailinglist_body_mailinglist_subject.py  0003_alter_log_options_remove_log_message_and_more.py
mailing_service/templates/: base.html
mailing_service/templates/mailing_service/: client_confirm_delete.html  client_form.html  client_list.html  log_list.html  mailing_list_confirm_delete.html  mailing_list_detail.html  mailing_list_form.html  mailing_list_list.html
