[tool.poetry]
name = "django-spam-service"
version = "0.1.0"
description = ""
authors = ["Евгений Ермак <144560375+EvgeniiErmak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.0,<5.0"
django-apscheduler = "^0.6.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
google-auth = "^2.25.2"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.111.0"
django-anymail = "^10.2"
python-decouple = "^3.8"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
